--- a/05-css-responsive/src/scss/_layout.scss
+++ b/05-css-responsive/src/scss/_layout.scss
@@ -16,7 +16,7 @@ body {
     justify-content: space-between;
 }
 .container{
-    max-width: 1024px;
+    padding: 0 2rem;
     margin: 0 auto;
 }
 header{
@@ -31,4 +31,11 @@ footer {
     flex-basis: 50px;
     flex-grow: 0;
     flex-shrink: 0;
+}
+
+@include md{
+    .container{
+        max-width: 1024px;
+        margin: 0 auto;
+    }
 }
