--- a/05-css-responsive/src/scss/_variables.scss
+++ b/05-css-responsive/src/scss/_variables.scss
@@ -11,7 +11,7 @@
     --border-width: 2px
 }
 
-// Small tablets and large smartphones (landscape view)
+// Small tablets and large smartphones (landscape view) 0  - 576
 $screen-sm-min: 576px;
 // Small tablets (portrait view)
 $screen-md-min: 768px;
