--- a/05-css-responsive/src/scss/blocks/_brands.scss
+++ b/05-css-responsive/src/scss/blocks/_brands.scss
@@ -1,20 +1,34 @@
 .brands {
     margin-bottom: 3rem;
     padding: 1rem;
+
+    &__items {
+        display: flex;
+        gap: 2rem;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    &__item {
+        flex-grow: 1;
+        flex-shrink: 1;
+        flex-basis: 35%;
+    }
+
+    &__item img {
+        width: 100%;
+        aspect-ratio: 1/1;
+        border-radius: 50%;
+    }
 }
-.brands__items {
-    display: flex;
-    gap: 1rem;
-    flex-direction: row;
-    justify-content: center;
-}
-.brands__item {
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: 25%;
-}
-.brands__item img{
-    width: 100%;
-    aspect-ratio: 1/1;
-    border-radius: 50%;
+@include md {
+    .brands {
+        &__item {
+            flex-basis: 20%;
+        }
+        &__items {
+           gap: 1rem;
+        }
+    }
 }
